styling/style.css
* {
    margin: 0;
    padding: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;


}

:root {
    --Background-Colour: #4E4E4E;
    --CallToAction: #FFA800;
    --BoxColour: #D9C9D4;
    --swiper-theme-color: #000 !important;
    --swiper-navigation-size: 2rem !important;
}

body {
    background-color: var(--Background-Colour);
    background-image: url("../images/FlamingWheelsPattern.png");
    background-repeat: repeat;
    background-size: 110%;
}

a {
    text-decoration: none;
}

h1 {
    color: white;
    font-size: 5rem;
}



/* #region header */
header {
    background-color: transparent;
}

header ul {
    display: flex;
    flex-direction: row;
    padding: 1rem;
    margin-top: 1rem;
}

header li {
    text-decoration: none;
    list-style: none;
    align-self: center;
}

header li:first-child {
    margin-right: auto;
    align-self: flex-end;
}

header img {
    object-fit: contain;
    height: clamp(2rem, 30vw, 4rem);
}

header button {
    padding: 1rem;
    align-self: center;
    background-color: transparent;
    border: none;
    margin: 0;
    padding: 0;
}

header button:active {
    filter: opacity(50%);
}

header a {
    /* background-color: rgb(211, 211, 211); */
    padding: 1rem;

    font-size: clamp(0.9375rem, 0.738rem + 0.8511vw, 1.3125rem);
    word-break: break-all;
}

header a:hover {
    background-color: aquamarine;
}

/* #endregion header */

/* #region ZeroState */
.StartButton,
.OpslaanKnop {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0.625rem 3.75rem;

    z-index: 99;

    position: fixed;
    width: 50%;
    border-radius: 4.0625rem;
    margin-bottom: 1rem;
    margin-left: auto;
    margin-right: auto;
    bottom: 0;
    left: 0;
    right: 0;

    background-color: var(--CallToAction);
    color: white;
    font-size: larger;
    border: none;
    /* box-shadow: 0 1px 8px #000000; */
}

/* .OpslaanKnop {
    margin-bottom: 4rem;
} */

.StartButton:active {
    background-color: #db5bc6;
}

.StartImgText {
    display: flex;
    flex-direction: column;
    margin: 1rem;
    position: relative;
    margin-top: 5rem;
}

.StartImgText img {
    position: relative;
    object-fit: contain;
    width: 20rem;
    margin-left: auto;
    margin-right: auto;
    top: -4rem;
}

.StartImgText>h1 {
    text-align: center;
    font-style: italic;
}

/* #endregion ZeroState */

/* #region footer*/
/* footer {
    position:absolute;
    bottom:0;
    width:100%;
    height:50px; 
    background-color: whitesmoke;
} */

/* #endregion footer */

/* #region SamenStellen */
.CarBuild {
    background-color: var(--BoxColour);
    border-radius: 31px;
    width: 80vw;
    height: auto;
    /* Changed to auto */
    position: relative;
    /* Changed to relative */
    margin: 4rem auto 0;
    display: flex;
    gap: 2rem;
    flex-direction: column;
    justify-content: center;
    padding: 2rem;
    /* Added padding */
}

.CarWithButtons {
    position: relative;
    /* Added position */
    width: 100%;
    /* Added width */
}

.swiper-button-prev,
.swiper-button-next {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    z-index: 10;
    cursor: pointer;
    background: none;
    border: none;
    color: #000000;
}

.swiper-button-prev {
    left: 10px;
}

.swiper-button-next {
    right: 10px;
}

.CarSliderCar img {
    max-width: 100%;
    height: auto;
    object-fit: contain;
    display: block;
    margin: 0 auto;
}

button {
    cursor: pointer;
}

button:focus {
    outline: none;
}

ul,
li {
    list-style: none;
}

.swiper-container {
    overflow: hidden;
}

.swiper-slide img {
    max-width: 70%;
    /* Changed to max-width */
    height: auto;
    /* Added height auto */
    object-fit: contain;
    display: block;
    margin: 0 auto;
    /* Center the image */
}

.swiper-slide .swiper-slide-active {
    display: flex;
    align-self: center;
}

.swiper-button-next::after,
.swiper-button-prev::after {
    content: "";
    align-self: center;
}

.BuildImg>img {
    object-fit: contain;
    height: 10rem;
    margin: auto;
    display: block;
}

/* #endregion SamenStellen */

